err/simc-autobahn.err
Listing '.'...
Listing './bin'...
Compiling './bin/pwiz.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/autobahn'...
Listing './lib/python3.5/site-packages/autobahn/asyncio'...
Listing './lib/python3.5/site-packages/autobahn/asyncio/test'...
Listing './lib/python3.5/site-packages/autobahn/rawsocket'...
Listing './lib/python3.5/site-packages/autobahn/rawsocket/test'...
Listing './lib/python3.5/site-packages/autobahn/test'...
Listing './lib/python3.5/site-packages/autobahn/twisted'...
Listing './lib/python3.5/site-packages/autobahn/wamp'...
Listing './lib/python3.5/site-packages/autobahn/wamp/test'...
Listing './lib/python3.5/site-packages/autobahn/websocket'...
Listing './lib/python3.5/site-packages/autobahn/websocket/test'...
Listing './lib/python3.5/site-packages/autobahn-17.10.1.dist-info'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/bs4-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/caller'...
Compiling './lib/python3.5/site-packages/caller/caller.py'...
***   File "./lib/python3.5/site-packages/caller/caller.py", line 66
    l.info(f"Started with --limit={args['--limit']}, --multi_emeny={args['--multi_enemy']}, permutations={permutations_count}")
                                                                                                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/peewee-2.10.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/playhouse'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simc_autobahn'...
Compiling './lib/python3.5/site-packages/simc_autobahn/my_logger.py'...
***   File "./lib/python3.5/site-packages/simc_autobahn/my_logger.py", line 18
    s = f"{get_caller()} {self.prefix} {s}"
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/simc_autobahn/simc_permutations.py'...
***   File "./lib/python3.5/site-packages/simc_autobahn/simc_permutations.py", line 63
    output.append(f"specialization={config.get('Profile', el)}")
                                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/simc_autobahn-1.0.3.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/subscriber'...
Compiling './lib/python3.5/site-packages/subscriber/subscriber.py'...
***   File "./lib/python3.5/site-packages/subscriber/subscriber.py", line 26
    self.log.info(f"session ready on {conf['wamp']['uri']}, {conf['wamp']['realm']}")
                                                                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/twisted'...
Listing './lib/python3.5/site-packages/twisted/plugins'...
Listing './lib/python3.5/site-packages/txaio'...
Listing './lib/python3.5/site-packages/txaio-2.8.2.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/worker'...
Compiling './lib/python3.5/site-packages/worker/worker.py'...
***   File "./lib/python3.5/site-packages/worker/worker.py", line 93
    logger.info(f"SimC found at {simc_exe}")
                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yattag'...
Listing './lib/python3.5/site-packages/yattag-1.9.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
